--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Aboreto&family=New+Amsterdam&family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 body h1 {
-  font-family: "New Amsterdam", sans-serif;
+  font-family: "Oswald";
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+body p {
+  font-family: "Rubik";
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 @layer base {
