--- a/app/admin/admin.css
+++ b/app/admin/admin.css
@@ -1,16 +1,16 @@
 .my-booked-class {
-  position: relative; /* This ensures that the pseudo-element can be positioned relative to the day cell */
+  position: relative;
 }
 
 .my-booked-class::after {
-  content: ""; /* Necessary to create a pseudo-element */
-  position: absolute; /* Position the pseudo-element out of the normal flow, relative to the nearest positioned ancestor */
-  right: 2px; /* Distance from the right edge of the day cell */
-  top: 2px; /* Distance from the top edge of the day cell */
-  width: 6px; /* Width of the dot */
-  height: 6px; /* Height of the dot */
-  border-radius: 50%; /* Makes the dot circular */
-  background-color: gray; /* Color of the dot */
+  content: "";
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: gray;
 }
 
 .my-unread-class {
