--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,55 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+.gallery-container {
+  transition: 5s;
+}
+.gallery-container .box {
+  position: relative;
+  transition: 0.5s;
+}
+.gallery-container:hover .box {
+  filter: grayscale(1);
+}
+.gallery-container .box:hover {
+  filter: grayscale(0);
+}
+.gallery-container:has(.one:hover) {
+  grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
+}
+.gallery-container:has(.two:hover) {
+  grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr 0.5fr;
+}
+.gallery-container:has(.three:hover) {
+  grid-template-columns: 0.5fr 0.5fr 2fr 0.5fr 0.5fr;
+}
+.gallery-container:has(.four:hover) {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 2fr 0.5fr;
+}
+.gallery-container:has(.five:hover) {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 2fr;
+}
+
+.gallery-container .box::before {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    #18181b,
+    transparent,
+    transparent,
+    transparent,
+    #18181b
+  );
+}
+
+.gallery-container .box:nth-child(even) {
+  transform: translateY(20px);
+}
+.gallery-container .box:nth-child(odd) {
+  transform: translateY(-20px);
+}
 
 @layer base {
   :root {
