--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-.gallery-container {
+/* .gallery-container {
   transition: 5s;
 }
 .gallery-container .box {
@@ -71,6 +71,97 @@ body {
 }
 .gallery-container .box:nth-child(odd) {
   transform: translateY(-20px);
+} */
+
+.gallery-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  width: 1000px;
+  height: 500px;
+
+  transition: 0.5s;
+}
+
+.gallery-container .box {
+  position: relative;
+  background: var(--img);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: grayscale(0) brightness(1.25);
+}
+
+.gallery-container:hover .box {
+  filter: grayscale(1);
+}
+
+.gallery-container .box:hover {
+  filter: grayscale(0) brightness(1.25);
+}
+
+.gallery-container:has(.one:hover) {
+  grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
+}
+
+.gallery-container:has(.two:hover) {
+  grid-template-columns: 0.5fr 2fr 0.5fr 0.5fr 0.5fr;
+}
+
+.gallery-container:has(.three:hover) {
+  grid-template-columns: 0.5fr 0.5fr 2fr 0.5fr 0.5fr;
+}
+
+.gallery-container:has(.four:hover) {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 2fr 0.5fr;
+}
+
+.gallery-container:has(.five:hover) {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 2fr;
+}
+
+.gallery-container .box::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    #18181b,
+    transparent,
+    transparent,
+    transparent,
+    #18181b
+  );
+}
+
+.gallery-container .box:nth-child(even) {
+  transform: translateY(20px);
+}
+.gallery-container .box:nth-child(odd) {
+  transform: translateY(-20px);
+}
+
+.gallery-container .box::after {
+  content: attr(data-text);
+  position: absolute;
+  bottom: -80px;
+  background: #fff;
+  color: #000;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 5px 15px;
+  transition: 0.5s;
+  letter-spacing: 0.5em;
+  opacity: 0;
+  transition-delay: 0s;
+  -webkit-box-reflect: below 2px linear-gradient(transparent, #0003);
+}
+
+.gallery-container .box:hover::after {
+  opacity: 1;
+  bottom: -40px;
+  transition-delay: 0.2s;
 }
 
 @layer base {
